--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,8 @@ const { name, lastname, role, photo, description } = Astro.props;
       <div class="flex flex-col justify-center space-y-4">
         <div class="space-y-2">
           <p class="text-l pb-2 font-semibold text-[#7126d9]">Hola! Yo soy</p>
-          <h1 class="text-6xl font-bold text-[#393456]">{name}
+          <h1 class="text-6xl font-bold text-[#393456] transform transition-transform duration-300 hover:scale-110">{name}
+
             <span class="text-[#7126d9] underline decoration-4 underline-offset-8 decoration-[#ddcdf5]">{lastname}</span>
           </h1>
           <p class="text-2xl pt-5 font-extralight text-gray">{role}</p>
